--- a/login.html
+++ b/login.html
@@ -36,6 +36,10 @@
 					<a href="#">Restaurar contraseña</a>
 				</div>
 
+				<div class="alert alert-light text-danger alert-dismissible fade mt-4" role="alert">
+					Email o contraseña no es correcto.
+				</div>
+
 			</form>
 
 
@@ -55,5 +59,6 @@
 	<!-- Javascript -->
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="js/login.js"></script>
 </body>
 </html>
